<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_background"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    android:paddingTop="30dp"
    android:paddingBottom="30dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_password"
        android:textColor="@color/primary"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textAllCaps="true"
        android:layout_marginBottom="30dp"
        android:layout_gravity="center_horizontal"/>

    <EditText
        android:id="@+id/CreateItemDialog_PlatformIdentifierInput"
        android:textColor="@color/primary"
        android:autofillHints="none"
        android:inputType="text"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textColorHint="#CFCFCF"
        android:textSize="16sp"
        android:hint="@string/website"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/master_password_input"/>

    <EditText
        android:id="@+id/CreateItemDialog_UsernameInput"
        android:textColor="@color/primary"
        android:autofillHints="username"
        android:inputType="text"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textColorHint="#CFCFCF"
        android:layout_marginTop="15dp"
        android:textSize="16sp"
        android:hint="@string/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/master_password_input"/>

    <EditText
        android:id="@+id/CreateItemDialog_PasswordInput"
        android:textColor="@color/primary"
        android:autofillHints="none"
        android:inputType="textVisiblePassword"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textColorHint="#CFCFCF"
        android:layout_marginTop="5dp"
        android:textSize="16sp"
        android:hint="@string/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/master_password_input"/>

    <TextView
        android:id="@+id/CreateItemDialog_GeneratePasswordButton"
        android:focusable="true"
        android:clickable="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:textStyle="bold"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/generate_password_button"
        android:text="@string/generate_password"
        android:gravity="center"
        android:textColor="@color/primary"
        android:textAllCaps="false"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/CreateItemDialog_CreateButton"
        android:focusable="true"
        android:clickable="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:textStyle="bold"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/master_password_done"
        android:text="@string/create"
        android:gravity="center"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:textSize="16sp"/>

</LinearLayout>